# SHM_COMM

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/: copilot-instructions.md
.github/prompts/: RAFT_teleop_arm.prompt.md
.github/workflows/: ci.yml
docs/: api_reference.md  performance_tuning.md  troubleshooting.md
examples/: benchmark.py  command_executor.py  command_sender.py  numpy_sharing.py  reqrep_example.py  simple_pubsub.py
shm_comm/: __init__.py  buffer.py  core.py  exceptions.py  serialize.py  sync.py  utils.py
shm_comm/patterns/: __init__.py  pipeline.py  pubsub.py  reqrep.py
tests/: conftest.py  test_buffer.py  test_core.py  test_performance.py  test_pipeline.py  test_pubsub.py  test_reqrep.py
